--- a/library-service-rest-frontend/pom.xml
+++ b/library-service-rest-frontend/pom.xml
@@ -19,6 +19,13 @@
 
 
     <dependencies>
+        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
         <!-- Spring core & mvc -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -135,11 +142,6 @@
             <artifactId>commons-math3</artifactId>
             <version>3.2</version>
         </dependency>
-        <dependency>
-            <groupId>edu.pitt.apollo</groupId>
-            <artifactId>broker-service</artifactId>
-            <version>4.0-SNAPSHOT</version>
-        </dependency>
         
         <dependency>
             <groupId>edu.pitt.apollo</groupId>
@@ -237,7 +239,7 @@
                     <path>/mkyongWebApp</path>
                 </configuration>
             </plugin>
-               <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
