--- a/library-service/pom.xml
+++ b/library-service/pom.xml
@@ -10,19 +10,6 @@
     <name>Library Service</name>
     <packaging>jar</packaging>
 
-    <distributionManagement>
-       <repository>
-            <id>rods-nexus-deployment</id>
-            <name>RODS Nexus</name>
-            <url>https://internal.rods.pitt.edu/nexus/content/repositories/apollo-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>rods-nexus-deployment</id>
-            <name>RODS Nexus</name>
-            <url>https://internal.rods.pitt.edu/nexus/content/repositories/apollo-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <repositories>
         <repository>
             <id>sonatype-forge</id>
@@ -99,7 +86,7 @@
                             <resources>
                                 <resource>
                                 
-                                    <directory>${basedir}/../src/main/resources</directory>
+                                    <directory>${basedir}/../../apollo-xsd-and-types-3.1.0/src/main/resources</directory>
                                     <includes>
                                         <include>library_service_4.0.wsdl</include>
                                         <include>library_service_4.0.xsd</include>
